--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,16 +5,17 @@
 
 <div class="container">
     <div class="row">
-
-
+        <app-serarch *ngIf="flag" [id]="id"></app-serarch>
         <div class="col-md-12">
             <h4>Project Detail</h4>
+            
             <div class="table-responsive">
 
-                <p data-placement="top" data-toggle="tooltip" title="Add"><button
-                    class="btn btn-danger btn-xs" (click)="add()" data-title="Add" data-toggle="modal"><span class="glyphicon glyphicon-plus">Add</span></button>
+                <p data-placement="top" data-toggle="tooltip" title="Add">
+                    <button class="btn btn-danger btn-xs" (click)="addProject()" data-title="Add" data-toggle="modal"><span class="glyphicon glyphicon-plus">Add</span></button>&nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-danger btn-xs" (click)="searchProject()" data-title="Search" data-toggle="modal"><span class="glyphicon glyphicon-search">Search</span></button>
                 </p>
-                
+              
                 <table class="table table-bordred table-striped">
                     
                     <thead>
@@ -34,12 +35,12 @@
                             <td>{{item.notify}}</td>
                             <td>{{item.enableNotes}}</td>
                             <td>
-                                <p data-placement="top" data-toggle="tooltip" title="Edit"><button (click)="updateDetail(item.id)"
-                                        class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"><span class="glyphicon glyphicon-pencil"></span></button>
+                                <p data-placement="top" data-toggle="tooltip" title="Edit"><button (click)="updateProject(item.id)"
+                                    class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"><span class="glyphicon glyphicon-pencil"></span></button>
                                 </p>
                             </td>
                             <td>
-                                <p data-placement="top" data-toggle="tooltip" title="Delete"><button (click)="deleteData(item.id)"
+                                <p data-placement="top" data-toggle="tooltip" title="Delete"><button (click)="deleteProject(item.id)"
                                         class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"><span class="glyphicon glyphicon-trash"></span></button>
                                 </p>
                             </td>
@@ -55,32 +56,3 @@
         </div>
     </div>
 </div>
-<div *ngIf="updateData=='true'">
-<h3>Update Data </h3>
-    
-    <div>
-        <label for="Name">Name</label>
-        <input type="text"[(ngModel)]="name" placeholder="{{name}}">
-    
-        <label for="Prefix">Prefix</label>
-        <input type="text" [(ngModel)]="prefix" placeholder="{{prefix}}">
-    
-        <label for="Description">Description</label>
-        <input type="text" [(ngModel)]="description" placeholder="{{description}}">
-    
-        <label for="Notify">Notify</label>
-        <select [(ngModel)]="notify">
-          <option value="T">True</option>
-          <option value="F">False</option>
-        </select>
-    
-        <label for="Enable Notice">Enable Notice</label>
-        <select [(ngModel)]="enableNotes">
-          <option value="T">True</option>
-          <option value="F">False</option>
-        </select>
-      
-        <input type="submit" (click)="onSubmit()" value="Submit">
-    </div>
-</div>
-
